// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IconButton > snapshot: disabled prop 1`] = `
<button
  class="ucl-icon-button css-ch2n3t"
  data-testid="ucl-icon-button"
  disabled=""
>
  <svg
    class="ucl-icon css-148hpxb"
    data-testid="ucl-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="3"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="20 6 9 17 4 12"
    />
  </svg>
</button>
`;

exports[`IconButton > snapshot: no props 1`] = `
<button
  class="ucl-icon-button css-j76afn"
  data-testid="ucl-icon-button"
>
  <svg
    class="ucl-icon css-148hpxb"
    data-testid="ucl-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="3"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="20 6 9 17 4 12"
    />
  </svg>
</button>
`;

exports[`IconButton > snapshot: testId prop 1`] = `
<button
  class="ucl-icon-button css-j76afn"
  data-testid="abc"
>
  <svg
    class="ucl-icon css-148hpxb"
    data-testid="ucl-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="3"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="20 6 9 17 4 12"
    />
  </svg>
</button>
`;
